@@ -27,7 +27,6 @@ import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -35,14 +34,15 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeSet;
-import java.util.function.Predicate;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.util.stream.Stream;
 import java.util.zip.CRC32;
 import org.apache.commons.codec.binary.Base32;
 import org.apache.lucene.document.Document;
+import org.apache.lucene.index.StoredFields;
 import org.apache.lucene.search.IndexSearcher;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.search.ScoreDoc;
@@ -172,11 +172,12 @@ class ClassDependencyIndexCreator extends AbstractIndexCreator {
         for (IndexingContext context : contexts) {
             IndexSearcher searcher = context.acquireIndexSearcher();
             try {
+                StoredFields storedFields = searcher.storedFields();
                 searcher.search(refClassQuery, collector);
                 ScoreDoc[] hits = collector.topDocs().scoreDocs;
                 LOG.log(Level.FINER, "for {0} ~ {1} found {2} hits", new Object[] {className, searchString, hits.length});
                 for (ScoreDoc hit : hits) {
-                    Document d = searcher.doc(hit.doc);
+                    Document d = storedFields.document(hit.doc);
                     String fldValue = d.get(NB_DEPENDENCY_CLASSES);
                     LOG.log(Level.FINER, "{0} uses: {1}", new Object[] {className, fldValue});
                     Set<String> refClasses = parseField(searchString, fldValue, d.get(ArtifactInfo.NAMES));
@@ -184,7 +185,7 @@ class ClassDependencyIndexCreator extends AbstractIndexCreator {
                         ArtifactInfo ai = IndexUtils.constructArtifactInfo(d, context);
                         if (ai != null) {
                             ai.setRepository(context.getRepositoryId());
-                            List<NBVersionInfo> version = NexusRepositoryIndexerImpl.convertToNBVersionInfo(Collections.singleton(ai));
+                            List<NBVersionInfo> version = NexusRepositoryIndexerImpl.convertToNBVersionInfo(List.of(ai));
                             if (!version.isEmpty()) {
                                 results.add(new ClassUsage(version.get(0), refClasses));
                             }
@@ -196,7 +197,9 @@ class ClassDependencyIndexCreator extends AbstractIndexCreator {
             }
         }
     }
+
     private static Set<String> parseField(String refereeCRC, String field, String referrersNL) {
+        assert refereeCRC.length() == 7;
         Set<String> referrers = new TreeSet<>();
         int p = 0;
         for (String referrer : referrersNL.split("\n")) {
@@ -205,7 +208,7 @@ class ClassDependencyIndexCreator extends AbstractIndexCreator {
                     p++;
                     break;
                 }
-                if (field.substring(p, p + 7).equals(refereeCRC)) {
+                if (field.regionMatches(p, refereeCRC, 0, refereeCRC.length())) {
                     referrers.add(referrer.substring(1).replace('/', '.'));
                 }
                 p += 8;
@@ -214,7 +217,7 @@ class ClassDependencyIndexCreator extends AbstractIndexCreator {
         return referrers;
     }
 
-    static final Predicate<String> JDK_CLASS_TEST = new MatchWords(new String[]{
+    private static final String[] JDK_CLASS_TEST = new String[] {
         "apple/applescript", "apple/laf", "apple/launcher", "apple/security",
         "com/apple/concurrent", "com/apple/eawt", "com/apple/eio", "com/apple/laf", "com/oracle/net",
         "com/oracle/nio", "com/oracle/util", "com/oracle/webservices", "com/oracle/xmlns",
@@ -256,34 +259,31 @@ class ClassDependencyIndexCreator extends AbstractIndexCreator {
         "org/omg/CosNaming", "org/omg/Dynamic", "org/omg/DynamicAny", "org/omg/IOP", "org/omg/Messaging",
         "org/omg/PortableInterceptor", "org/omg/PortableServer", "org/omg/SendingContext", "org/omg/stub",
         "org/w3c/dom", "org/xml/sax"
-    });
+    };
 
     /**
      * @param referrer a referring class, as {@code pkg/Outer$Inner}
-     * @param data its bytecode
+     * @param classData its bytecode
      * @param depsMap map from referring outer classes (as {@code pkg/Outer}) to referred-to classes (as {@code pkg/Outer$Inner})
      * @param siblings other referring classes in the same artifact (including this one), as {@code pkg/Outer$Inner}
      */
-    private static void addDependenciesToMap(String referrer, InputStream data, Map<String, Set<String>> depsMap, Set<String> siblings) throws IOException {
+    private static void addDependenciesToMap(String referrer, InputStream classData, Map<String, Set<String>> depsMap, Set<String> siblings) throws IOException {
+
         int shell = referrer.indexOf('$', referrer.lastIndexOf('/') + 1);
         String referrerTopLevel = shell == -1 ? referrer : referrer.substring(0, shell);
-        for (String referee : dependencies(data)) {
-            if (referrer.equals(referee)) {
-                continue;
-            }
-            if (siblings.contains(referee)) {
-                continue; // in same JAR, not interesting
-            }
-            if (JDK_CLASS_TEST.test(referee)) {
-                continue;
-            }
-            Set<String> referees = depsMap.get(referrerTopLevel);
-            if (referees == null) {
-                referees = new HashSet<>();
-                depsMap.put(referrerTopLevel, referees);
-            }
-            referees.add(referee);
-        }
+
+        Set<String> referees = depsMap.computeIfAbsent(referrerTopLevel, k -> new HashSet<>());
+
+        dependenciesOf(classData)
+            .filter((referee) -> !referrer.equals(referee))
+            .filter((referee) -> !siblings.contains(referee)) // in same JAR, not interesting
+            .filter((referee) -> {
+                for (int i = 0; i < JDK_CLASS_TEST.length; i++)
+                    if (referee.startsWith(JDK_CLASS_TEST[i]))
+                        return false;
+                return true;
+            })
+            .forEach((referee) -> referees.add(referee));
     }
 
     @FunctionalInterface
@@ -312,7 +312,7 @@ class ClassDependencyIndexCreator extends AbstractIndexCreator {
     }
 
     void read(File jar, JarClassEntryConsumer consumer) throws IOException {
-        Set<String> classNames = new HashSet<>();
+        Set<String> classNames = new HashSet<>(512);
         try (JarFile jf = new JarFile(jar, false)) {
             // XXX the original code ignores siblings by first having a list
             // of the class names.  Getting this before processing JAR entries
@@ -359,17 +359,12 @@ class ClassDependencyIndexCreator extends AbstractIndexCreator {
         }
     }
 
-    // adapted from org.netbeans.nbbuild.VerifyClassLinkage
-    private static Collection<String> dependencies(InputStream data) throws IOException {
-        Set<ClassName> cl = new ClassFile(data).getAllClassNames();
-        Set<String> result = new HashSet<>(cl.size());
-        for (ClassName className : cl) {
-            result.add(className.getInternalName());
-        }
-        return result;
+    private static Stream<String> dependenciesOf(InputStream classData) throws IOException {
+        return new ClassFile(classData).getAllClassNames()
+                .stream().unordered().map(ClassName::getInternalName).distinct();
     }
 
-    static final List<IndexerField> INDEXER_FIELDS = Collections.singletonList(FLD_NB_DEPENDENCY_CLASS);
+    static final List<IndexerField> INDEXER_FIELDS = List.of(FLD_NB_DEPENDENCY_CLASS);
     @Override
     public Collection<IndexerField> getIndexerFields() {
         return INDEXER_FIELDS;
@@ -380,7 +375,7 @@ class ClassDependencyIndexCreator extends AbstractIndexCreator {
      * @return the CRC-32 of its UTF-8 representation, as big-endian Base-32 without padding (so seven chars), lower case (to not confuse maven-indexer)
      */
     static String crc32base32(String s) {
-        crc.reset();
+        CRC32 crc = new CRC32();
         crc.update(s.getBytes(StandardCharsets.UTF_8));
         long v = crc.getValue();
         byte[] b32 = base32.encode(new byte[] {(byte) (v >> 24 & 0xFF), (byte) (v >> 16 & 0xFF), (byte) (v >> 8 & 0xFF), (byte) (v & 0xFF)});
@@ -389,7 +384,6 @@ class ClassDependencyIndexCreator extends AbstractIndexCreator {
         return new String(b32, 0, 7, StandardCharsets.ISO_8859_1).toLowerCase();
     }
 
-    private static final CRC32 crc = new CRC32();
     private static final Base32 base32 = new Base32();
 
 }
